--- a/zplayer/zplayer-base.scss
+++ b/zplayer/zplayer-base.scss
@@ -9,6 +9,7 @@ player {
     grid-template-columns: 16px auto 12px 1fr 16px;
     -webkit-user-drag: none;
     user-select: none; 
+    position: relative;
 
     .player__controls {
         grid-column: 2;
@@ -34,6 +35,7 @@ player {
     }
 
     .player__track {
+        position: relative;
         z-index: 5;
         cursor: pointer;
         display: inline-flex;
@@ -41,30 +43,35 @@ player {
         width: 100%;
         height: 22px;
         justify-content: center;
+        margin: 12px 0px;
         align-items: center;
 
         .player__trackbar {
             position: relative;
             background: gray;
             height: 2px;
+            transition: all .125s;
             width: 100%;
+            border-radius: 64px;
 
             .player__progress {
                 height: 2px;
+                transition: height .125s;
                 background: rgb(229, 62, 255);
+                border-radius: 16px;
             }
 
             .player__trackhandle {
                 pointer-events: none;
                 opacity: 0;
-                transition: opacity .25s;
+                transition: opacity .25s, width .25s, height .25s, border-radius .25s;
                 top: -3px;
                 margin-left: -4px;
                 left: 100%;
                 position: absolute;
                 height: 8px;
                 width: 8px;
-                border-radius: 50%;
+                border-radius: 100%;
                 background: rgb(229, 62, 255);
             }
 
@@ -93,6 +100,21 @@ player {
         .player__track {
             .player__trackhandle {
                 opacity: 1;
+            }
+
+            .player__trackbar {
+                height: 4px;
+                .player__progress {
+                    height: 4px;
+                }
+                
+                .player__trackhandle {
+                    top: -4px;
+                    margin-left: -6px;
+                    height: 12px;
+                    width: 12px;
+                    border-radius: 50%;
+                }
             }
         }
     }
